[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yosemite-camping-monitor"
version = "0.1.0"
description = "GitHub Actions monitor for Yosemite Pines campground availability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "camply==0.34.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
